kubernetes/namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securepipeline
  labels:
    app.kubernetes.io/part-of: securepipeline
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
